fixed windows path problems for Directory too